opa/library/constraints/general/requiredimagepullsecrets/constraint.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sRequiredImagePullSecrets
metadata:
  name: must-have-imagepullsecret
spec:
  enforcementAction: dryrun
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
    excludedNamespaces:
      - "kube-*"
      - "gatekeeper-system"        
    # namespaces:
    #   - "openshift-marketplace"
